--- a/public/pages/cakes.html
+++ b/public/pages/cakes.html
@@ -44,7 +44,7 @@
             <a class="nav-link" href="/about">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">EVENT HIRE</a>
+            <a class="nav-link" href="/eventhire">EVENT HIRE</a>
           </li>
           <li class="nav-item active">
             <a class="home-link nav-link" href="/menu">MENU</a>
@@ -70,7 +70,7 @@
   <div class="row row-cols-1 row-cols-lg-3 row-cols-sm-1">
   <div class="col mb-3">
     <div class="card">
-      <img src="../Images/vic-sponge.PNG" class="card-img-top" alt="Victoria Sponge">
+      <img src="../Images/vic-sponge.png" class="card-img-top" alt="Victoria Sponge">
       <div class="card-body">
         <h5 class="card-title">Victoria Sponge (vegan)</h5>
         <p class="card-text">£2.00 <i class="vegan-icon fas fa-seedling"></i> </p>
@@ -88,7 +88,7 @@
   </div>
   <div class="col mb-3">
     <div class="card">
-      <img src="../Images/muffin.PNG" class="card-img-top" alt="Muffin">
+      <img src="../Images/muffin.png" class="card-img-top" alt="Muffin">
       <div class="card-body">
         <h5 class="card-title">Biscoff Muffin (vegan)</h5>
         <p class="card-text">£2.00 <i class="vegan-icon fas fa-seedling"></i> </p>
@@ -100,7 +100,7 @@
 <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
 <div class="col mb-4">
   <div class="card">
-    <img src="../Images/brownie.PNG" class="card-img-top" alt="Brownie">
+    <img src="../Images/brownie.png" class="card-img-top" alt="Brownie">
     <div class="card-body">
       <h5 class="card-title">Brownie</h5>
       <p class="card-text">£2.00</p>
@@ -109,7 +109,7 @@
 </div>
 <div class="col mb-4">
   <div class="card">
-    <img src="../Images/rocky-road.PNG" class="card-img-top" alt="Rocky Road">
+    <img src="../Images/rocky-road.png" class="card-img-top" alt="Rocky Road">
     <div class="card-body">
       <h5 class="card-title">Rocky Road</h5>
       <p class="card-text">£1.60</p>
@@ -118,7 +118,7 @@
 </div>
 <div class="col mb-4">
   <div class="card">
-    <img src="../Images/choc-fudge.PNG" class="card-img-top" alt="Chocolate Fudge">
+    <img src="../Images/choc-fudge.png" class="card-img-top" alt="Chocolate Fudge">
     <div class="card-body">
       <h5 class="card-title">Chocolate Fudge</h5>
       <p class="card-text">£2.00</p>
@@ -127,7 +127,7 @@
 </div>
 <div class="col mb-4">
   <div class="card">
-    <img src="../Images/cookies.PNG" class="card-img-top" alt="Cookie">
+    <img src="../Images/cookies.png" class="card-img-top" alt="Cookie">
     <div class="card-body">
       <h5 class="card-title">Cookie</h5>
       <p class="card-text">£1.60</p>
