--- a/public/pages/drinks.html
+++ b/public/pages/drinks.html
@@ -44,7 +44,7 @@
             <a class="nav-link" href="/about">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">EVENT HIRE</a>
+            <a class="nav-link" href="/eventhire">EVENT HIRE</a>
           </li>
           <li class="nav-item active">
             <a class="home-link nav-link" href="/menu">MENU</a>
@@ -64,7 +64,7 @@
 
 <div class="page-text">
 
-  <img class="drinks-blackboard" src="../Images/blackboard.PNG" alt="Drinks Blackboard">
+  <img class="drinks-blackboard" src="../Images/blackboard.png" alt="Drinks Blackboard">
 
 
 </div>
