--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Blue Brew</title>
+    <meta name="description" content="Takeaway coffee van based in West Sussex, England. We are continuing to operate through the COVID-19 lockdown.">
+
+    <title>Blue Brew | Takeaway Coffee Van</title>
 
     <link rel="stylesheet" href="../CSS/styles.css">
 
@@ -27,46 +29,115 @@
 
   <body>
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;" >
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;">
 
       <img class="navbar-brand" src="../Images/logo-2.png" alt="Company Logo">
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
+      <div class="nav-links collapse navbar-collapse text-left" id="navbarTogglerDemo02">
+
+        <ul class="navbar-nav ml-auto">
+
+          <li class="nav-item ">
+            <a class=" nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="home-link nav-link" href="#">ABOUT</a>
+            <a class="nav-link home-link" href="/about">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/gallery">GALLERY</a>
+          </li>
+          <div class="menu-align">
+
+
+
+          <li class="nav-item dropdown menu-div">
+
+          <a class="nav-link menu-nav" href="/menu" role="button">
+            MENU
+          </a>
+          <a class="nav-link dropdown-toggle dropdown-toggle-split menu-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span class="sr-only">Toggle Dropdown</span>
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/drinks">DRINKS</a>
+            <a class="dropdown-item" href="/cakes">CAKES</a>
+            </div>
+
+        </li>
+        </div>
+
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="/testimonials">TESTIMONIALS</a>
+          </li> -->
+          <li class="nav-item blog-nav">
+            <a class="nav-link" href="/blog">BLOG</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/eventhire">EVENT HIRE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/menu">MENU</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/blog">BLOG</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/contact">CONTACT US</a>
           </li>
-        </ul>
+          <li class="nav-item">
+            <a href="https://www.facebook.com/bluebrew2019" target="_blank"><i class="social-icons-navbar fab fa-facebook-square fa-1x"></i></a>
+            <a href="https://www.instagram.com/bluebrew2019/" target="_blank"><i class="social-icons-navbar fab fa-instagram fa-1x"></i></a>
+          </li>
 
-      </div>
+
+
+        </ul>
+        </div>
+
+
     </nav>
 
-    <div class="page-body">
+    <section id="page-backgrounds" >
+
+
+
+    <div class="page-body-about">
 
 <div class="page-text">
       <h2>About Us</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Ben and Jem are a couple from West Sussex who founded Blue Brew through their passion for coffee and desire to build their own business. <br> <br> After travelling the globe and experiencing coffee in many different cultures, from walking through the coffee plantations in Vietnam to sitting back and sipping on flat whites in Melbourne’s bustling Degraves Street, the couple were keen to get started on setting up their own coffee business upon returning to the UK. <br> <br>
+They fast learnt the power of coffee (along with good conversation!) in bringing people together and providing a comfort quite unlike any other. <br> <br> Blue Brew is available for private hire, whatever the occasion, we would love to bring our delicious speciality coffee and homemade treats to you and your guests. Please get in touch! <br> <br> <strong> Feeling Brew? Have a Blue!</strong>
+</p>
+<br>
+<h4>Our Story</h4>
+<br>
+<br>
+<div class="story-1">
+<img class="story-img" src="../Images/story-1.PNG" alt="From Then...">
+<p>From then...</p>
+</div>
+
+<div class="story-2">
+  <p class="story-2-text" >To now...</p>
+<img class="story-img" src="../Images/story-2.PNG" alt="To now...">
+</div>
+
+<br>
+<br>
+
+<p>Our story began in early 2019 when we took an excited 2 hour drive to pick up our vintage horsebox trailer from Elstree Studios in London, where it had previously been used as a prop in a popular Netflix show! <br> <br>
+It took the two of us around 5 months to undertake the mammoth task of converting our trailer from an empty (minus the manure!) shell to the fully kitted-out coffee box it is today.
+</p>
+
+
+<img class="story-img-2" src="../Images/story-3.PNG" alt="">
+<img class="story-img-2" src="../Images/story-4.PNG" alt="">
+<img class="story-img-2" src="../Images/story-5.PNG" alt="">
+<img class="story-img-2" src="../Images/story-6.PNG" alt="">
+
 </div>
     </div>
+
+    </section>
 
     <div class="about-break">
 
@@ -96,7 +167,7 @@
     <button type="submit" class="newsletter-btn btn btn-primary"> <strong> SIGN UP </strong></button>
   </form>
 
-      <h6 class="footer-text"> © Blue Brew 2020 </h6>
+      <h6 class="footer-text"> © Blue Brew <span id="currentYear"></span> </h6>
 
   </div>
 
@@ -106,6 +177,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+    <script>
+    const year = new Date().getFullYear();
+        document.getElementById("currentYear").innerHTML = year;
+    </script>
   </body>
 </html>
