--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -5,7 +5,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Blue Brew</title>
+    <meta name="description" content="Takeaway coffee van based in West Sussex, England. We are continuing to operate through the COVID-19 lockdown.">
+
+    <title>Blue Brew | Takeaway Coffee Van</title>
 
     <link rel="stylesheet" href="../CSS/styles.css">
 
@@ -26,47 +28,85 @@
   </head>
   <body>
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;" >
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;">
 
       <img class="navbar-brand" src="../Images/logo-2.png" alt="Company Logo">
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <div class="nav-links collapse navbar-collapse text-left" id="navbarTogglerDemo02">
+
+        <ul class="navbar-nav ml-auto">
+
           <li class="nav-item">
-            <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
+            <a class=" nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/eventhire">EVENT HIRE</a>
+            <a class="nav-link" href="/gallery">GALLERY</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/menu">MENU</a>
-          </li>
-          <li class="nav-item">
+          <div class="menu-align">
+
+
+
+          <li class="nav-item dropdown menu-div">
+
+          <a class="nav-link menu-nav" href="/menu" role="button">
+            MENU
+          </a>
+          <a class="nav-link dropdown-toggle dropdown-toggle-split menu-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span class="sr-only">Toggle Dropdown</span>
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/drinks">DRINKS</a>
+            <a class="dropdown-item" href="/cakes">CAKES</a>
+            </div>
+
+        </li>
+        </div>
+
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="/testimonials">TESTIMONIALS</a>
+          </li> -->
+          <li class="nav-item blog-nav">
             <a class="nav-link" href="/blog">BLOG</a>
           </li>
-          <li class="nav-item active">
-            <a class="home-link nav-link" href="#">CONTACT US</a>
+          <li class="nav-item">
+            <a class="nav-link" href="/eventhire">EVENT HIRE</a>
           </li>
-        </ul>
+          <li class="nav-item active">
+            <a class="nav-link home-link" href="/contact">CONTACT US</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://www.facebook.com/bluebrew2019" target="_blank"><i class="social-icons-navbar fab fa-facebook-square fa-1x"></i></a>
+            <a href="https://www.instagram.com/bluebrew2019/" target="_blank"><i class="social-icons-navbar fab fa-instagram fa-1x"></i></a>
+          </li>
 
-      </div>
+
+
+        </ul>
+        </div>
+
+
     </nav>
+
+<section id="page-backgrounds">
+
+
 
     <div class="page-body">
 
 <div class="page-text">
-      <h2>Contact Us</h2>
+      <h2 class="contact-title" >Contact Us</h2>
 
     <div class="card-deck">
       <div class="card">
-        <div class="card-body">
+        <div class="contact-cards card-body">
           <span class="fab-icons" >
           <i class="fas fa-map-marker-alt fa-3x"></i>
           </span>
@@ -74,7 +114,7 @@
           <p class="card-text">We are based in West Sussex, England. Our precise location varies, so please refer to our social media pages for the most up-to-date location.</p>
         </div>
       </div>
-      <div class="card">
+      <div class="contact-cards card">
         <div class="card-body">
 
         <span class="fab-icons" >
@@ -84,7 +124,7 @@
           <p class="card-text"> <a href="mailto:bluebrew2019@outlook.com"> bluebrew2019 <br> @outlook.com </a></p>
         </div>
       </div>
-      <div class="card">
+      <div class="contact-cards card">
         <div class="card-body">
           <span class="fab-icons" >
             <i class="fas fa-phone fa-3x"></i>
@@ -93,7 +133,7 @@
           <p class="card-text"> <a href="tel:07544 946179"> 07544 946179</a></p>
         </div>
       </div>
-      <div class="card">
+      <div class="contact-cards card">
         <div class="card-body">
           <span class="fab-icons" >
             <i class="fas fa-hashtag fa-3x"></i>
@@ -109,21 +149,41 @@
 
 <strong><p>Any feedback / questions? <br> Feel free to drop us a message below.</p></strong>
 
-<form action="/contact" method="POST" >
+<!-- name="contactForm" action="/email" method="POST" -->
+
+<form name="contactForm" onsubmit="return validateForm()">
+
   <div class="row">
   <div class="col contact-form form-group">
-    <label>Name</label>
-    <input type="text" name="name" class="form-control" placeholder="Enter name here">
+    <label>Name*</label>
+    <div class="event-input">
+    <input type="text" name="name" class="form-control text" id="name" placeholder="Enter name here">
+    </div>
   </div>
+  </div>
+  <div class="row">
   <div class="col contact-form form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email address here">
+    <label for="exampleInputEmail1">Email address*</label>
+    <div class="event-input">
+    <input type="email" name="email" class="form-control" aria-describedby="emailHelp" id="email" placeholder="Enter email address here">
+    </div>
   </div>
   </div>
-  <div class="contact-form form-group">
-    <label for="exampleFormControlTextarea1">Feedback / Enquiry</label>
-    <textarea class="form-control" name="enquiry" id="exampleFormControlTextarea1" rows="3" placeholder="Let us know your thoughts or ask us a question."></textarea>
+  <div class="row">
+  <div class="col contact-form form-group">
+    <label for="exampleInputEmail1">Telephone</label>
+    <div class="event-input">
+    <input type="tel" name="telephone" class="form-control text" id="tel" aria-describedby="emailHelp" placeholder="Enter number here">
+    </div>
   </div>
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Feedback / Enquiry*</label>
+    <textarea class="form-control text" type="text" name="enquiry"  rows="3" id="enquiry" placeholder="Let us know your thoughts or ask us a question."></textarea>
+  </div>
+
+  <br>
+  <small id="emailHelp" class="form-text text-muted">*Required fields</small>
   <small id="emailHelp" class="form-text text-muted">We'll never share your details with anyone else.</small>
   <br>
   <button type="submit" class="btn btn-primary">Submit</button>
@@ -134,6 +194,7 @@
 <div class="page-breaks">
 
 </div>
+</section>
 
     <div class="footer">
 
@@ -158,16 +219,59 @@
     <button type="submit" class="newsletter-btn btn btn-primary"> <strong> SIGN UP </strong></button>
   </form>
 
-      <h6 class="footer-text"> © Blue Brew 2020 </h6>
+      <h6 class="footer-text"> © Blue Brew <span id="currentYear"></span> </h6>
 
   </div>
 
     </div>
 
-
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+<script src="../src/index.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script>
+    const year = new Date().getFullYear();
+        document.getElementById("currentYear").innerHTML = year;
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+      $("form").on("submit", e => {
+        e.preventDefault();
 
+        const name = $("#name")
+          .val()
+          .trim();
+
+          const email = $("#email")
+            .val()
+            .trim();
+
+          const tel = $("#tel")
+            .val()
+            .trim();
+
+            const enquiry = $("#enquiry")
+              .val()
+              .trim();
+
+        const subject = "Website Contact Form Submission";
+
+        const text = "Name: " + name + "..." + "Email Address: " + email + "..." + "Telephone: " + tel + "..." + "Feedback / Enquiry: " + enquiry;
+
+        const data = {
+          subject,
+          text
+        };
+
+        $.post("/email", data)
+          .then(() => {
+            window.location.href = "/form-success";
+          })
+          .catch(() => {
+            window.location.href = "/form-failure";
+          });
+      });
+    </script>
   </body>
 </html>
