--- a/public/pages/event.html
+++ b/public/pages/event.html
@@ -5,7 +5,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Blue Brew</title>
+    <meta name="description" content="Takeaway coffee van based in West Sussex, England. We are continuing to operate through the COVID-19 lockdown.">
+
+    <title>Blue Brew | Takeaway Coffee Van</title>
 
     <link rel="stylesheet" href="../CSS/styles.css">
 
@@ -26,39 +28,76 @@
   </head>
 
   <body>
-
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;" >
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;">
 
       <img class="navbar-brand" src="../Images/logo-2.png" alt="Company Logo">
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
+      <div class="nav-links collapse navbar-collapse text-left" id="navbarTogglerDemo02">
+
+        <ul class="navbar-nav ml-auto">
+
+          <li class="nav-item ">
+            <a class=" nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">ABOUT</a>
           </li>
-          <li class="nav-item active">
-            <a class="home-link nav-link" href="#">EVENT HIRE</a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link" href="/menu">MENU</a>
+            <a class="nav-link" href="/gallery">GALLERY</a>
           </li>
-          <li class="nav-item">
+          <div class="menu-align">
+
+
+
+          <li class="nav-item dropdown menu-div">
+
+          <a class="nav-link menu-nav" href="/menu" role="button">
+            MENU
+          </a>
+          <a class="nav-link dropdown-toggle dropdown-toggle-split menu-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span class="sr-only">Toggle Dropdown</span>
+          </a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/drinks">DRINKS</a>
+            <a class="dropdown-item" href="/cakes">CAKES</a>
+            </div>
+
+        </li>
+        </div>
+
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="/testimonials">TESTIMONIALS</a>
+          </li> -->
+          <li class="nav-item blog-nav">
             <a class="nav-link" href="/blog">BLOG</a>
           </li>
-          <li class="nav-item">
-          <a class="nav-link" href="/contact">CONTACT US</a>
+          <li class="nav-item active">
+            <a class="nav-link home-link" href="/eventhire">EVENT HIRE</a>
           </li>
-        </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">CONTACT US</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://www.facebook.com/bluebrew2019" target="_blank"><i class="social-icons-navbar fab fa-facebook-square fa-1x"></i></a>
+            <a href="https://www.instagram.com/bluebrew2019/" target="_blank"><i class="social-icons-navbar fab fa-instagram fa-1x"></i></a>
+          </li>
 
-      </div>
+
+
+        </ul>
+        </div>
+
+
     </nav>
+
+    <section id="page-backgrounds">
+
+
 
 <div class="page-body">
 
@@ -66,44 +105,66 @@
   <h2>Event Hire</h2>
   <p>Blue Brew is available for private hire. Please fill out the form below with your details and we'll get back to you as soon as possible.</p>
 
-  <form action="/eventhire" method="POST" >
-
+  <form name="contactForm" onsubmit="return validateForm()">
 
     <div class="row">
     <div class="col event-form form-group">
-      <label>Name</label>
-      <input type="text" name="name" class="form-control" placeholder="Enter name here">
+      <label>Name*</label>
+      <div class="event-input">
+      <input type="text" name="name" class="form-control" id="name" placeholder="Enter name here">
+      </div>
     </div>
-    <div class="col event-form form-group">
-      <label>Business</label>
-      <input type="text" name="business" class="form-control" placeholder="Enter business name here">
     </div>
-</div>
     <div class="row">
     <div class="col event-form form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email address here">
+      <label for="exampleInputEmail1">Email address*</label>
+      <div class="event-input">
+      <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email address here">
+      </div>
     </div>
+    </div>
+    <div class="row">
     <div class="col event-form form-group">
       <label>Telephone</label>
-      <input type="tel" name="telephone" class="form-control" placeholder="Enter telephone number here">
+      <div class="event-input">
+      <input type="tel" name="telephone" class="form-control" id="tel" placeholder="Enter telephone number here">
+      </div>
     </div>
     </div>
+    <div class="row">
+    <div class="col event-form form-group">
+      <label>Business Name (if applicable)</label>
+      <div class="event-input">
+      <input type="text" name="business" class="form-control" id="business" placeholder="Enter business name here">
+        </div>
+    </div>
+</div>
+
     <br>
+    <div class="row">
+      <div class="col event-form form-group">
+        <div class="form-group">
+    <label for="exampleFormControlTextarea1">Message</label>
+    <textarea class="form-control" id="enquiry" rows="5" placeholder="Please provide some further details on your event and your expectations, such as number of guests." ></textarea>
+  </div>
+      </div>
+      </div>
+      <br>
     <p> <strong> When would you like to hire us?</strong></p>
 
     <div class="event-form form-group">
       <label>Date from</label>
       <br>
-      <input type="date" name="dateFrom" class="form-dates form-control">
+      <input type="date" name="dateFrom" id="dateFrom" class="form-dates form-control">
     </div>
     <div class="event-form form-group">
       <label>Date to</label>
       <br>
-      <input type="date" name="dateTo" class="form-dates form-control">
+      <input type="date" name="dateTo" id="dateTo" class="form-dates form-control">
     </div>
     <br>
     <br>
+    <small id="emailHelp" class="form-text text-muted">*Required fields</small>
     <small id="emailHelp" class="form-text text-muted">We'll never share your details with anyone else.</small>
     <br>
     <button type="submit" class="btn btn-primary">Submit</button>
@@ -141,16 +202,70 @@
     <button type="submit" class="newsletter-btn btn btn-primary"> <strong> SIGN UP </strong></button>
   </form>
 
-      <h6 class="footer-text"> © Blue Brew 2020 </h6>
+      <h6 class="footer-text"> © Blue Brew <span id="currentYear"></span> </h6>
 
   </div>
 
     </div>
+    </section>
 
-
+<script src="../src/index.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script>
+    const year = new Date().getFullYear();
+        document.getElementById("currentYear").innerHTML = year;
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+      $("form").on("submit", e => {
+        e.preventDefault();
+
+        const name = $("#name")
+          .val()
+          .trim();
+
+          const email = $("#email")
+            .val()
+            .trim();
+
+          const tel = $("#tel")
+            .val()
+            .trim();
+
+            const enquiry = $("#enquiry")
+              .val()
+              .trim();
+
+              const business = $("#business")
+                .val()
+                .trim();
+                const dateFrom = $("#dateFrom")
+                  .val()
+                  .trim();
+                  const dateTo = $("#dateTo")
+                    .val()
+                    .trim();
+
+        const subject = "Website Event Hire Form Submission";
+
+        const text = "Name: " + name + "..." + "Email Address: " + email + "..." + "Telephone: " + tel + "..." + "Business Name: " + business + "..." + "Date From: " + dateFrom + "..." + "Date To: " + dateTo + "..." + "Message: " + enquiry;
+
+        const data = {
+          subject,
+          text
+        };
+
+        $.post("/email", data)
+          .then(() => {
+            window.location.href = "/form-success";
+          })
+          .catch(() => {
+            window.location.href = "/form-failure";
+          });
+      });
+    </script>
 
   </body>
 </html>
