--- a/public/pages/testimonials.html
+++ b/public/pages/testimonials.html
@@ -10,7 +10,7 @@
 
   <title>Blue Brew | Takeaway Coffee Van</title>
 
-  <link rel="stylesheet" href="/CSS/styles.css">
+  <link rel="stylesheet" href="../CSS/styles.css">
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -18,12 +18,20 @@
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/97f4617e8b.js" crossorigin="anonymous"></script>
 
-
   <!-- Favicon -->
-  <link rel="icon" href="/Images/Favicon.png">
+  <link rel="icon" href="../Images/Favicon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+</head>
+
+<body>
+
 
   <!-- Navigation Bar -->
 
@@ -94,28 +102,63 @@
 
   </nav>
 
-<body>
-
 <section id="page-backgrounds">
-
-
-
-  <div class="blog-content">
-
-
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Uh oh!</h1>
-    <p class="lead">There was a problem with your form submission. Please try again or contact us.</p>
-
-    <form action="/failure" method="post">
-      <button class="btn btn-lg btn-warning" type="submit" name="button">Try Again</button>
-    </form>
-
-
-  </div>
-</div>
 
 </section>
 
-<%- include("partials/footer"); -%>
+  <!-- Home Footer -->
+
+  <div class="footer">
+
+<div class="footer-display">
+  <a href="/contact" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
+
+<br>
+
+<span style="color: #72A3B3;">
+  <a href="https://www.facebook.com/bluebrew2019" target="_blank"><i class="social-icons fab fa-facebook-square fa-2x"></i></a>
+</span>
+
+<span style="color: #72A3B3;">
+<a href="https://www.instagram.com/bluebrew2019/" target="_blank"><i class="social-icons fab fa-instagram fa-2x"></i></a>
+</span>
+
+<h3 class="newsletter-text" ><strong>JOIN OUR MAILING LIST</strong></h3>
+<form action="/eventhire" method="POST">
+  <div class="newsletter-form form-group">
+    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <button type="submit" class="newsletter-btn btn btn-primary"> <strong> SIGN UP </strong></button>
+</form>
+
+    <h6 class="footer-text"> © Blue Brew <span id="currentYear"></span> </h6>
+
+</div>
+
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+<script src="../src/index.js" type="text/javascript"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+AOS.init();
+</script>
+<script>
+const year = new Date().getFullYear();
+  document.getElementById("currentYear").innerHTML = year;
+</script>
+<script type="text/javascript">
+/* curator-feed-default-feed-layout */
+(function(){
+var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
+i.src = "https://cdn.curator.io/published/0e6dac18-fd3e-45d1-ab0e-135f3489b83a.js";
+e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+})();
+</script>
+</body>
+
+</html>
